@@ -1,5 +1,13 @@
 2007-04-26  Benoît Dejean  <benoit@placenet.org>
 
+	* src/proctable.cpp:
+	
+	Try to fix dependencies when using active/my view.
+	I am not sure it's correct, at least it doesn't g_assert
+	on startup.
+
+2007-04-26  Benoît Dejean  <benoit@placenet.org>
+
 	* configure.in:
 	* src/Makefile.am:
 	* src/lsof.cpp:
